# DjangoBigProjectTemplate

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
DjangoBigProjectTemplate/: asgi.py  settings.py  urls.py  wsgi.py
dbpt/: manage.py
dbpt/DjangoBigProjectTemplate/: urls.py
dbpt/DjangoBigProjectTemplate/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
dbpt/DjangoBigProjectTemplate/settings/templates/: settings.dev.py
dbpt/core/utils/: collections.py  misc.py  settings.py
